# movie-rating-tool

./: .gitignore  README.md  pyproject.toml
src/movie_rating_tool/: __init__.py  __main__.py  cli.py  data_loader.py  models.py  rating_engine.py  visualization.py
src/movie_rating_tool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
