[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-rating-tool"
version = "0.1.0"
description = "A movie rating tool with personal ratings, online comparison, stats and visualizations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]
